# Praktikum-Software-Engineering

./: CMakeLists.txt  README.md  clang-formatter.sh  coverage.sh  docker-compose.yml  main.cpp
Ctest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  angle_test.cpp  circle_test.cpp  cmake_install.cmake  compare_test.cpp  compare_test.cpp.autosave  geo_compare_test.cpp  line_test.cpp  point_test.cpp  pose_test.cpp
Ctest/Ctest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compare_google_test[1]_include.cmake  point_google_test[1]_include.cmake  pose_google_test[1]_include.cmake
Ctest/Testing/Temporary/: CTestCostData.txt
Ctest/geometry2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Ctest/geometry2d/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Ctest/geometry2d/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Ctest/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake
geometry2d/: CMakeLists.txt
geometry2d/include/: CMakeLists.txt  angle.h  circle.h  geo_compare.h  line.h  point.h  pose.h
geometry2d/src/: CMakeLists.txt  angle.cpp  circle.cpp  geo_compare.cpp  line.cpp  point.cpp  point_test.cpp  pose.cpp  pose_test.cpp
util/: CMakeLists.txt
util/include/: compare.h
util/src/: compare.cpp  compare_test.cpp
